--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<script></script>
 <form action="upload.php" method="post" enctype="multipart/form-data">
-  Select image to upload:
+  Select mp4 to upload:
   <input type="file" name="fileToUpload" id="fileToUpload">
-  <input type="submit" value="Upload Image" name="submit">
+  <input type="submit" value="Upload Video" name="submit">
+</form>
+
+<form action="anamorphise.php" method="post" enctype="multipart/form-data">
+  <input type="submit" value="Create Anamorphic Video" name="submit">
 </form>
 
 </body>
