--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <form action="anamorphise.php" method="post" enctype="multipart/form-data">
   <input type="submit" value="Create Anamorphic Video" name="submit">
 </form>
+<form action="reset.php" method="get">
+  <input type="submit" value="Reset">
+</form>
 
 
 
