--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <input type="submit" value="Upload Video" name="submit">
 </form>
 
-<form action="anamorphise.php" method="post" enctype="multipart/form-data">
+<form action="/Anamorphiser/workspace/anamorphise.php" method="post" enctype="multipart/form-data">
   <input type="submit" value="Create Anamorphic Video" name="submit">
 </form>
 <form action="reset.php" method="get">
