--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 <form action="/Anamorphiser/workspace/anamorphise.php" method="post" enctype="multipart/form-data">
   <input type="submit" value="Create Anamorphic Video" name="submit">
 </form>
+<h2></h2>
 <form action="reset.php" method="get">
   <input type="submit" value="Reset">
 </form>
+
+
+<h2>Download File from HERE : </h2>
+<a href="download.php?file=output.mp4">click HERE</a>
+
 
 
 
