--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 </form>
 
 
-<h2>Download File from HERE : </h2>
-<a href="download.php?file=output.mp4">click HERE</a>
+<h2>Processed Videos: </h2>
+<a href = "/Anamorphiser/outputs/">here</a>
+
 
 
 
