--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <form action="/Anamorphiser/workspace/anamorphise.php" method="post" enctype="multipart/form-data">
   <input type="submit" value="Create Anamorphic Video" name="submit" id="anamorphButton">
 </form>
-
+<div id ="load">
+<p>(LET ME LOAD) </p>
+</div>
 
 <iframe style="display:none;" name="this"></iframe>
 <form action="reset.php" method="get" target="this">
