--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 
 <iframe style="display:none;" name="this"></iframe>
-<form action="reset.php" method="get" target="this">
+<form action="/Anamorphiser/workspace/reset.php" method="get" target="this">
   <input type="submit" value="Reset" id ="resetButton">
 </form>
 
