--- a/index.html
+++ b/index.html
@@ -18,27 +18,23 @@
 </form>
 
 
-<form action="/Anamorphiser/workspace/anamorphise.php" method="post" enctype="multipart/form-data">
+<form action="/html/workspace/anamorphise.php" method="post" enctype="multipart/form-data">
   <input type="submit" value="Create Anamorphic Video" name="submit" id="anamorphButton">
 </form>
+
 <div id ="load">
 <p>(LET ME LOAD) </p>
 </div>
 
 <iframe style="display:none;" name="this"></iframe>
-<form action="/Anamorphiser/workspace/reset.php" method="get" target="this">
+<form action="/html/workspace/reset.php" method="get" target="this">
   <input type="submit" value="Reset" id ="resetButton">
 </form>
 
 
 <div id ="videos">
-<a href = "/Anamorphiser/outputs/">Processed Videos</a>
+<a href = "/html/outputs/">Processed Videos</a>
 </div>
-
-<div id ="">
-
-</div>
-
 
 
 </body>
