--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </form>
 
 
-<form action="/html/workspace/anamorphise.php" method="post" enctype="multipart/form-data">
+<form action="/workspace/anamorphise.php" method="post" enctype="multipart/form-data">
   <input type="submit" value="Create Anamorphic Video" name="submit" id="anamorphButton">
 </form>
 
@@ -27,13 +27,13 @@
 </div>
 
 <iframe style="display:none;" name="this"></iframe>
-<form action="/html/workspace/reset.php" method="get" target="this">
+<form action="/workspace/reset.php" method="get" target="this">
   <input type="submit" value="Reset" id ="resetButton">
 </form>
 
 
 <div id ="videos">
-<a href = "/html/outputs/">Processed Videos</a>
+<a href = "/outputs/">Processed Videos</a>
 </div>
 
 
