--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <input type="submit" value="Create Anamorphic Video" name="submit" id="anamorphButton">
 </form>
 
-<div id ="load">
+<!-- <div id ="load">
 <p>(LET ME LOAD) </p>
-</div>
+</div> -->
 
 <iframe style="display:none;" name="this"></iframe>
 <form action="/workspace/reset.php" method="get" target="this">
