--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </script>
 
 <form action="/workspace/anamorphise.php" method="post" enctype="multipart/form-data">
-  <input type="submit" value="Create Anamorphic Video" onclick="Effect();" name="submit" id="anamorphButton">
+  <input type="submit" value="Create Anamorphic Video" onclick="someFunc();" name="submit" id="anamorphButton">
 </form>
 
 <!-- <div id ="load">
