--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <!--Link to outputs tab-->
   <div title = "See created outputs" id="videos">
-    <a href="/outputs/">Processed Videos</a>
+    <a href="/outputs/showOutputs.php">Processed Videos</a>
   </div>
 
 
