Output folder changes

--- a/index.html
+++ b/index.html
@@ -48,14 +48,9 @@
   <div>
     <h2 id="changeLog">Change Log:</h2>
     <p id="clText">
-      - Combined functionality of "Upload Video" and "Create Anamorphic" Video button.
+      - Changed the way processed videos are accessed.
       <br>
-      - UI changes.
-      </br>
-      - Added tooltips.
-      <br>
-      - Corrected cone settings.
-      </br>
+      - Added limit to number of outputed videos allowed to be on the server. (To prevent a repeat of the data loss)
     </p>
   </div>
 
