--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
       - Changed the way processed videos are accessed.
       <br>
       - Added limit to number of outputed videos allowed to be on the server. (To prevent a repeat of the data loss)
+      <br>
+
+
+    <h3 id="knownBugs"> Known Bugs:</h3>
+    <p id="kbText">
+      - 'Create Anamorphic Video' button uploads a file to the server even if the server has too many files. If you get this error, click reset before trying 'Create Anamorphic Video' again.
+	<br>
+      - Multiple users cant 'Anamorphise' a video at the same time
+    </p>
     </p>
   </div>
 
